--- a/flutter/insta/android/app/src/debug/AndroidManifest.xml
+++ b/flutter/insta/android/app/src/debug/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dambarbahadurpun.insta">
+    package="com.clone.insta">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
