--- a/flutter/insta/pubspec.yaml
+++ b/flutter/insta/pubspec.yaml
@@ -32,18 +32,18 @@ dependencies:
   video_player: ^2.1.12
   path_provider: ^2.0.2
   share: ^2.0.4
-  webview_flutter: ^2.0.10
+  webview_flutter: ^4.0.7
 
-  camera: ^0.8.1+7
+  camera: ^0.10.3+2
   path: ^1.8.0
 
-  dio: ^4.0.0
+  dio: ^5.0.3
   rxdart: ^0.27.1
   cached_network_image: ^3.1.0
 
-  font_awesome_flutter: ^9.1.0
-  firebase_core: ^1.4.0
-  firebase_auth: ^3.0.1
+  font_awesome_flutter: ^10.4.0
+  firebase_core: ^2.8.0
+  firebase_auth: ^4.3.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -51,6 +51,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  firebase_core_platform_interface: 4.5.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
