--- a/insta/Gemfile
+++ b/insta/Gemfile
@@ -29,7 +29,6 @@ gem "image_processing", "~> 1.2" # Use Active Storage variants [https://guides.r
 gem "jbuilder" # Bundle and process CSS [https://github.com/rails/cssbundling-rails]
 gem "jsbundling-rails" # Bundle and transpile JavaScript [https://github.com/rails/jsbundling-rails]
 gem "kredis" # Use Kredis to get higher-level data types in Redis [https://github.com/rails/kredis]
-gem "letter_opener", "~> 1.8"
 gem "memory_profiler", "~> 1.0"
 gem "pagy", "~> 9.2"
 gem "paper_trail", "~> 15.0"
@@ -64,16 +63,18 @@ gem "warning", "~> 1.3"
 group :development, :test do
   gem "byebug", "~> 11.1", require: false
   gem "debug", platforms: [:mri, :mingw, :x64_mingw] # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
+  gem "factory_bot_rails", "~> 6.2"
   gem "rspec-rails", "~> 6.0"
 end
 
 group :development do
   gem "erb_lint", "~> 0.5.0"
-  gem "factory_bot_rails", "~> 6.2"
   gem "guard", "~> 2.18"
   gem "guard-rspec", "~> 4.7"
   gem "hotwire-livereload", "~> 1.2"
   gem "htmlbeautifier", "~> 1.4"
+  gem "letter_opener", "~> 1.8"
+  gem "letter_opener_web", "~> 3.0"
   gem "rack-mini-profiler" # Add speed badges [https://github.com/MiniProfiler/rack-mini-profiler]
   gem "spring" # Speed up commands on slow machines / big apps [https://github.com/rails/spring]
   gem "web-console" # Use console on exceptions pages [https://github.com/rails/web-console]
