update: base search setting for vscode(performance)

--- a/insta/.vscode/settings.json
+++ b/insta/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   "files.associations": {
     "*.html.erb": "erb"
+  },
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/bower_components": true,
+    "**/*.code-search": true,
+    "**/.ruby-lsp": true
   }
 }
