--- a/insta/package.json
+++ b/insta/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "insta",
   "private": "true",
   "engines": {
     "yarn": ">=1.22.x",
@@ -8,9 +8,9 @@
   },
   "engineStrict": true,
   "dependencies": {
+    "@babel/core": "^7.28.4",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^7.3.0",
-    "@primer/view-components": "^0.35.1",
     "@rails/actiontext": "^7.0.8",
     "@shopify/polaris": "^11.25.0",
     "ahoy.js": "^0.4.3",
@@ -19,20 +19,10 @@
     "classnames": "^2.5.1",
     "husky": "^8.0.3",
     "postcss": "^8.4.29",
-    "stimulus-character-counter": "^4.2.0",
-    "stimulus-clipboard": "^4.0.1",
-    "stimulus-content-loader": "^4.2.0",
-    "stimulus-dropdown": "^2.1.0",
-    "stimulus-notification": "^2.2.0",
-    "stimulus-password-visibility": "^2.1.1",
-    "stimulus-popover": "^6.2.0",
-    "stimulus-prefetch": "^3.0.0",
-    "stimulus-rails-autosave": "^4.1.1",
-    "stimulus-rails-nested-form": "^4.1.0",
-    "stimulus-scroll-to": "^4.1.0",
-    "stimulus-use": "^0.52.0",
-    "tailwindcss": "^3.3.3",
-    "trix": "^2.0.5",
+    "stimulus-use": "^0.52.3",
+    "tailwindcss": "^4.1.13",
+    "trix": "^2.1.15",
+    "tw-animate-css": "^1.4.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
@@ -42,18 +32,33 @@
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
     "build": "webpack --config webpack.config.js",
     "docker:services:up": "docker compose -f docker/services.yml up -d",
-    "docker:services:down": "docker compose -f docker/services.yml down"
+    "docker:services:down": "docker compose -f docker/services.yml down",
+    "docker:dev:up": "docker compose -f docker/dev.yml up -d",
+    "docker:down:up": "docker compose -f docker/dev.yml down"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@eslint/js": "^9.36.0",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^22",
     "astroturf-loader": "^1.0.0",
-    "eslint": "^8.49.0",
+    "babel-loader": "^10.0.0",
+    "browserslist": "^4.26.2",
+    "eslint": "^9.36.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
+    "fork-ts-checker-webpack-plugin": "^9.1.0",
     "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "ts-loader": "^9.5.4",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0"
   }
 }
