--- a/insta/Gemfile
+++ b/insta/Gemfile
@@ -6,6 +6,7 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby "3.3.6"
 gem "active_record_extended", "~> 3.2"
 gem "active_storage_validations", "~> 3.0"
+gem "acts_as_follower", github: "forem/acts_as_follower", branch: "master" # Allow any model to follow any other model
 gem "acts_as_paranoid", "~> 0.10.2"
 gem "ahoy_matey", "~> 4.2"
 gem "bcrypt", "~> 3.1.7" # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
@@ -18,6 +19,7 @@ gem "devise_invitable", "~> 2.0"
 gem "doorkeeper", "~> 5.6"
 
 gem "draper", "~> 4.0"
+gem "fastimage", "~> 2.4"
 gem "field_test", "~> 0.7.0"
 gem "font-awesome-sass", "~> 6.4"
 gem "friendly_id", "~> 5.5"
@@ -25,6 +27,7 @@ gem "image_processing", "~> 1.2" # Use Active Storage variants [https://guides.r
 gem "jbuilder" # Bundle and process CSS [https://github.com/rails/cssbundling-rails]
 gem "jsbundling-rails" # Bundle and transpile JavaScript [https://github.com/rails/jsbundling-rails]
 gem "kredis" # Use Kredis to get higher-level data types in Redis [https://github.com/rails/kredis]
+gem "rails-settings-cached", "~> 2.9"
 
 gem "pagy", "~> 9.2"
 gem "paper_trail", "~> 15.0"
@@ -108,9 +111,8 @@ group :test do
   gem "test-prof", "~> 1.2"
   gem "timecop", "~> 0.9.8"
   gem "webdrivers"
+  gem "with_model", "~> 2.2"
 end
 
 group :production do
 end
-
-gem "rails-settings-cached", "~> 2.9"
