--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,12 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: .ruby-version
+          ruby-version: insta/.ruby-version
           bundler-cache: true
 
       - name: Scan for common Rails security vulnerabilities using static analysis
         run: bin/brakeman --no-pager
+        working-directory: insta
 
   scan_js:
     runs-on: ubuntu-latest
@@ -32,11 +33,12 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: .ruby-version
+          ruby-version: insta/.ruby-version
           bundler-cache: true
 
       - name: Scan for security vulnerabilities in JavaScript dependencies
         run: yarn audit
+        working-directory: insta
 
   lint:
     runs-on: ubuntu-latest
@@ -47,11 +49,12 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: .ruby-version
+          ruby-version: insta/.ruby-version
           bundler-cache: true
 
       - name: Lint code for consistent style
         run: bin/rubocop -f github
+        working-directory: insta
 
   test:
     runs-on: ubuntu-latest
@@ -65,6 +68,7 @@ jobs:
     steps:
       - name: Install packages
         run: sudo apt-get update && sudo apt-get install --no-install-recommends -y build-essential git pkg-config google-chrome-stable
+        working-directory: insta
 
       - name: Checkout code
         uses: actions/checkout@v5
@@ -72,7 +76,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: .ruby-version
+          ruby-version: insta/.ruby-version
           bundler-cache: true
 
       - name: Run tests
@@ -80,6 +84,7 @@ jobs:
           RAILS_ENV: test
           REDIS_URL: redis://localhost:6379/0
         run: bin/rails db:test:prepare && bundle exec rspec
+        working-directory: insta
 
 
       - name: Keep screenshots from failed system tests
